# RemoteExecutorForSession

./: .gitignore  AGENTS.md  Cargo.toml  MCP.md  README.md
.github/workflows/: build-packages.yml  build-refs-opencode-napi.yml
docx/: README.md
docx/codex-app/: README.md
docx/codex-cli/: README.md
docx/opencode/: README.md
refs-opencode-napi/: Cargo.toml  package.json
refs-opencode-napi/src/: index.d.ts  index.ts  lib.rs  sqlite_host.rs
src/: host.rs  jsonrpc.rs  lib.rs  output.rs  ptyt.rs  rec.rs  refs.rs  types.rs
src/demos/: integration_tests.rs  json_file_host.rs  memory_host.rs  mod.rs
src/demos/fixtures/: realistic_maic.txt  realistic_patch_request.txt
src/mcp/: handler.rs  mcptooldefs.rs  mod.rs
