[package]
name = "remote_executor_for_session"
version = "0.1.0"
edition = "2021"
description = "Session-aware Rust SDK wrapper around the RemoteExecutor library API"
publish = false

[dependencies]
remote_executor = { git = "https://github.com/Yeamika/RemoteExecutor.git", tag = "v0.2.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha1 = "0.10"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tempfile = "3"

[dev-dependencies]

[[bin]]
name = "rec_mcp_demo"
path = "src/bin/rec_mcp_demo.rs"
