[package]
name = "remote_executor_for_session"
version = "0.1.12"
edition = "2021"
description = "Session-aware Rust SDK wrapper around the RemoteExecutor library API"
publish = false

[dependencies]
remote_executor = { git = "https://github.com/Yeamika/RemoteExecutor.git", branch = "main" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
sha1 = "0.10"
async-trait = "0.1"
futures-util = "0.3"
pty_t_protocol = { git = "https://github.com/Yeamika/RemoteExecutor.git", branch = "main" }
rand = "0.9"
regex = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tempfile = "3"
vt100 = "0.16"

[dev-dependencies]

[[bin]]
name = "rec_mcp_demo"
path = "src/bin/rec_mcp_demo.rs"

[[bin]]
name = "rec_mcp_memory_server"
path = "src/bin/rec_mcp_memory_server.rs"

[[bin]]
name = "rec_mcp_memory_ws_server"
path = "src/bin/rec_mcp_memory_ws_server.rs"

[[bin]]
name = "refs-ptyt"
path = "src/bin/refs_ptyt.rs"
