[package]
name = "refs-opencode"
version = "0.1.0"
edition = "2021"
description = "napi-rs bindings for RemoteExecutorForSession SDK, integrated with OpenCode SQLite"

[lib]
crate-type = ["cdylib"]

[dependencies]
remote_executor_for_session = { path = ".." }
remote_executor = { git = "https://github.com/Yeamika/RemoteExecutor.git", branch = "main" }
napi = { version = "2", features = ["async", "napi8", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[build-dependencies]
napi-build = "2"
